Sidebar no longer allows cropped image to be huge

--- a/static/top_charts/styles.css
+++ b/static/top_charts/styles.css
@@ -47,3 +47,9 @@
   color: #000;
   text-decoration: none;
   cursor: pointer; }
+
+.sidebar {
+  width: 20%; }
+
+.sidebar img {
+  width: 90%; }
